--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+.stylelintcache
+
 # For IDEs use global gitignore
 # touch ~/.gitignore_global
 # git config --global core.excludesfile ~/.gitignore_global
