--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@commitlint/config-conventional": "17.0.0",
     "@types/react-dom": "18.0.4",
     "@types/react-helmet": "6.1.5",
+    "@types/svg-parser": "2.0.3",
     "@typescript-eslint/eslint-plugin": "5.25.0",
     "@typescript-eslint/parser": "5.25.0",
     "commitizen": "4.2.4",
